// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checked status 1`] = `
<label
  className="sc-bdVaJa gEhoXm"
>
  <label
    className="sc-bwzfXH gEDjyj"
    height={34}
    width={60}
  >
    <input
      checked={true}
      className="sc-htpNat cUznao"
      type="checkbox"
    />
    <span
      className="sc-bxivhb iGnxFc"
    />
  </label>
</label>
`;

exports[`Disabled status 1`] = `
<label
  className="sc-bdVaJa gEhoXm"
>
  <label
    className="sc-bwzfXH gEDjyj"
    height={34}
    width={60}
  >
    <input
      className="sc-htpNat cUznao"
      disabled={true}
      type="checkbox"
    />
    <span
      className="sc-bxivhb iGnxFc"
    />
  </label>
</label>
`;

exports[`Display custom background colors 1`] = `
<label
  className="sc-bdVaJa gEhoXm"
>
  <label
    className="sc-bwzfXH gEDjyj"
    height={34}
    width={60}
  >
    <input
      className="sc-htpNat dDvMrc"
      type="checkbox"
    />
    <span
      className="sc-bxivhb iMLVkj"
    />
  </label>
</label>
`;

exports[`Display custom sizes 1`] = `
<label
  className="sc-bdVaJa gEhoXm"
>
  <label
    className="sc-bwzfXH esbtVt"
    height={20}
    width={40}
  >
    <input
      className="sc-htpNat jHQAcI"
      type="checkbox"
    />
    <span
      className="sc-bxivhb jeEOtu"
    />
  </label>
</label>
`;

exports[`Display left label 1`] = `
<label
  className="sc-bdVaJa gEhoXm"
>
  <span
    className="sc-ifAKCX ieghZq"
  >
    Label
  </span>
  <label
    className="sc-bwzfXH gEDjyj"
    height={34}
    width={60}
  >
    <input
      className="sc-htpNat cUznao"
      type="checkbox"
    />
    <span
      className="sc-bxivhb iGnxFc"
    />
  </label>
</label>
`;

exports[`Display left label 2`] = `
<label
  className="sc-bdVaJa gEhoXm"
>
  <span
    className="sc-ifAKCX ieghZq"
  >
    Label
  </span>
  <label
    className="sc-bwzfXH gEDjyj"
    height={34}
    width={60}
  >
    <input
      className="sc-htpNat cUznao"
      type="checkbox"
    />
    <span
      className="sc-bxivhb iGnxFc"
    />
  </label>
</label>
`;

exports[`Display right label 1`] = `
<label
  className="sc-bdVaJa gEhoXm"
>
  <label
    className="sc-bwzfXH gEDjyj"
    height={34}
    width={60}
  >
    <input
      className="sc-htpNat cUznao"
      type="checkbox"
    />
    <span
      className="sc-bxivhb iGnxFc"
    />
  </label>
  <span
    className="sc-ifAKCX ieghZq"
  >
    Label
  </span>
</label>
`;

exports[`Set input name and value 1`] = `
<label
  className="sc-bdVaJa gEhoXm"
>
  <label
    className="sc-bwzfXH gEDjyj"
    height={34}
    width={60}
  >
    <input
      className="sc-htpNat cUznao"
      name="toggle"
      type="checkbox"
      value="toggleValue"
    />
    <span
      className="sc-bxivhb iGnxFc"
    />
  </label>
</label>
`;

exports[`Standard output 1`] = `
<label
  className="sc-bdVaJa gEhoXm"
>
  <label
    className="sc-bwzfXH gEDjyj"
    height={34}
    width={60}
  >
    <input
      className="sc-htpNat cUznao"
      type="checkbox"
    />
    <span
      className="sc-bxivhb iGnxFc"
    />
  </label>
</label>
`;
